@@ -1,4 +1,5 @@
 NEXT:
+ * Fix checksum verification of some file sources used by collect_project
  * Fix SourceID calculation in files plugin under artificial conditions
  * Remove error message when an optional tool isn't present
 
